# ggviews

./: .gitignore  COVERAGE_PLAN.md  IMPLEMENTATION.md  README.md  TROUBLESHOOTING.md  debug_bokeh_controls.py  debug_empty_canvas.py  debug_smooth_issue.py  debug_viridis.py  examples.py  ggplot2_cheatsheet_audit.py  pyproject.toml  requirements.txt  setup.py  test_aesthetic_bug.py  test_aesthetic_fixes.py  test_all_examples.py  test_bug_fixes.py  test_demo_notebook.py  test_demo_notebook_cells.py  test_enhanced_legends.py  test_exact_notebook_code.py  test_fixed_colors.py  test_legend_functionality.py  test_new_features.py  test_render_plots.py  test_rendering_issue.py  test_user_example_fixed.py  test_user_reported_case.py  test_user_reported_fixes.py  test_viridis_fix.py  updated_coverage_audit.py
.emergent/: emergent.yml  summary.txt
data/: README.md
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: advanced_examples.py  american_names_recreation.py  basic.py  basic_usage.py  comprehensive_features_demo.py  debug_dimension_error.ipynb  facet_examples.py  faceting_comprehensive_test.py  fix_dimension_error.ipynb  geom_map_examples.py  ggplot2_comparison.py  ggviews_demo.ipynb  high_priority_features_demo.py  minimal_demo.py  new_features_demo.py  simple_comparison.py  simple_demo.py  test_advanced_features.py  test_aes_fix.py  test_all_features.py  test_coordinates.py  test_imports.py  test_notebook_compatibility.py  test_theme_fix.py  updated_ggplot2_comparison.py  visual_demo.py
frontend/: .env
ggviews.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+94 files in other folders)
