[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ggviews"
version = "0.1.0a0"
description = "ggplot2-like Grammar of Graphics for Python with Plotly"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "holoviews",
    "bokeh",
    "numpy",
    "pyparsing",
    "scipy",
    "statsmodels",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "nbformat"
]

[tool.setuptools.package-data]
"ggviews.data" = ["*.csv"]
"ggviews.scales" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ggviews*"]